--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
      <a href="https://y-yorozia.github.io/projects/post/project-3/" class="db grow">
      <img src="https://y-yorozia.github.io/projects/images/churn.jpg" class="img" alt="image from Project 1: Predicting Customer Churn"></a></div>    
 <div class="blah w-100 w-60-ns pl3-ns"><h1 class="f3 fw1 athelas mt0 lh-title">
-     <a href="https://y-yorozia.github.io/projects/post/project-3/" class="color-inherit dim link">Project 1: Predicting Customer Churn</a></h1>
+     <a href="https://y-yorozia.github.io/projects/post/project-3/" class="color-inherit dim link">
+	 Project 3: Predicting Customer Churn</a></h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
 We have a Telco dataset in our hands, the company shares some of the info from their customers without any personal details.
 We will try to build a model that predicts which group of customers are more likely to cancel their subscription (Churn) based on their communication behaviors.</div>
