--- a/index.html
+++ b/index.html
@@ -192,7 +192,18 @@
 We have a Telco dataset in our hands, the company shares some of the info from their customers without any personal details.
 We will try to build a model that predicts which group of customers are more likely to cancel their subscription (Churn) based on their communication behaviors.</div>
       <a href="https://y-yorozia.github.io/projects/post/project-3/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a></div></div></div></article>
-          </div>
+	  
+<article class="bb b--black-10"><div class="db pv4 ph3 ph0-l no-underline dark-gray"><div class="flex flex-column flex-row-ns"><div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+     <a href="https://y-yorozia.github.io/projects/post/project-4/" class="db grow">
+     <img src="https://y-yorozia.github.io/projects/images/seg.jpg" class="img" alt="image from Project 1: Data Science Salary Estimator"></a></div>    
+<div class="blah w-100 w-60-ns pl3-ns"><h1 class="f3 fw1 athelas mt0 lh-title">
+     <a href="https://y-yorozia.github.io/projects/post/project-4/" class="color-inherit dim link">Project 4: Customer Segmentation</a></h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+In this report, we will be aiming at better knowing targeting your audience based on their behaviour and their retention.
+            </div>
+      <a href="https://y-yorozia.github.io/projects/post/project-4/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a></div></div></div></article>          
+		  
+		  </div>
         
       </section>
 
