--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
   
   
   <header class="cover bg-top" style="background-image: url('https://y-yorozia.github.io/projects/images/dennis-kummer-52gEprMkp7M-unsplash.jpg');">
+   
     <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
-  
+        <div class="flex-l justify-between items-center fs">
+          <a href="https://y-yorozia.github.io/projects/certificate" class="f3 fw2 hover-white no-underline white-90 dib fs" style="text-align: right;float: right;margin-right: 0px;width: 100%;">Certificates</a></div>
 </nav>
 
       <div class="tc-l pv4 pv6-l ph3 ph4-ns">
